--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <link rel="stylesheet" href="css/styles.css" type='text/css'>
 </head>
 <body>
+<main class="main">
+    <div class="main__box">
+        <input id="field" class="main__field" type="text" placeholder="введите число">
+        <button id="sendReq" class="main__btn">отправить</button>
+        <button id="clearVal" class="main__btn">очистить поле</button>
+    </div>
+    <div id="massage" class="main__msg"></div>
+    <div id="cards" class="main__pictures"></div>
+</main>
 
 <script src="js/task3.js"></script>
 </body>
