--- a/task4_4.html
+++ b/task4_4.html
@@ -8,8 +8,8 @@
 <body>
 <main class="main">
     <div class="main__box main__box--lg">
-        <input id="firstNum" class="main__field" type="text" placeholder="введите число от 100 до 500">
-        <input id="secondNum" class="main__field" type="text" placeholder="введите число от 100 до 500">
+        <input id="firstNum" class="main__field" type="text" placeholder="число от 100 до 500">
+        <input id="secondNum" class="main__field" type="text" placeholder="число от 100 до 500">
         <button id="sendReq" class="main__btn">отправить</button>
     </div>
     <div id="massage" class="main__msg"></div>
