--- a/task4_4.html
+++ b/task4_4.html
@@ -13,7 +13,7 @@
         <button id="sendReq" class="main__btn">отправить</button>
     </div>
     <div id="massage" class="main__msg"></div>
-    <div id="cards" class="main__pictures"></div>
+    <div id="cards" class="main__pictures main__pictures--single"></div>
 </main>
 
 
